Cleanup: Too many turtles.

--- a/sources.html
+++ b/sources.html
@@ -111,14 +111,14 @@
                 The following represents the most recently available release:
               </p>
               <ul>
-                <li><a href="release/turtle/0.9/5/everything/x86/turtle-0.9.5-everything_x86-live.iso" class="link download">Turtle Turtle Kevux 0.9.5 (32-bit) (CD-ROM) (2012/02/28)</a> (<a href="release/turtle/0.9/5/everything/x86/turtle-0.9.5-everything_x86-live.iso.sha256" class="link download">checksum</a>)</li>
+                <li><a href="release/turtle/0.9/5/everything/x86/turtle-0.9.5-everything_x86-live.iso" class="link download">Turtle Kevux 0.9.5 (32-bit) (CD-ROM) (2012/02/28)</a> (<a href="release/turtle/0.9/5/everything/x86/turtle-0.9.5-everything_x86-live.iso.sha256" class="link download">checksum</a>)</li>
                 <li><a href="release/turtle/0.9/5/everything/x86_64/turtle-0.9.5-everything_x86_64-dvd.iso" class="link download">Turtle Kevux 0.9.5 (64-bit) (DVD-ROM) (2012/02/28)</a> (<a href="release/turtle/0.9/5/everything/x86_64/turtle-0.9.5-everything_x86_64-dvd.iso.sha256" class="link download">checksum</a>)</li>
               </ul>
               <p class="p">
                 The following represents the active development (unreleased) related code:
               </p>
               <ul>
-                <li><a href="release/turtle/0.9/development/everything/turtle-0.9.X-dvd.iso" class="link download">(Unreleased) Turtle Turtle Kevux 0.9.x (64-bit) (DVD-ROM) (2022/12/21)</a> (<a href="release/turtle/0.9/development/everything/turtle-0.9.X-dvd.iso.sha256" class="link download">SHA256</a>) (<a href="release/turtle/0.9/development/everything/turtle-0.9.X-dvd.iso.asc" class="link download">GPG</a>)</li>
+                <li><a href="release/turtle/0.9/development/everything/turtle-0.9.X-dvd.iso" class="link download">(Unreleased) Turtle Kevux 0.9.x (64-bit) (DVD-ROM) (2022/12/21)</a> (<a href="release/turtle/0.9/development/everything/turtle-0.9.X-dvd.iso.sha256" class="link download">SHA256</a>) (<a href="release/turtle/0.9/development/everything/turtle-0.9.X-dvd.iso.asc" class="link download">GPG</a>)</li>
               </ul>
             </div>
           </article>
