--- a/documentation/utf8.html
+++ b/documentation/utf8.html
@@ -263,7 +263,7 @@
                 This program establishes a pattern for some of the parameters. The parameters that represent a <em class="em">"from"</em> use lower case short characters and the parameters that represent a <em class="em">"to"</em> use upper case short characters. For short parameters that have both a <em class="em">"from"</em> and a <em class="em">"to"</em>, they use the same character with their case being different.
               </p>
               <p class="p">
-                The default behavior is to assume the expected input is byte sequence from the command line to be output to the screen as codepoints.
+                The default behavior is to assume the expected input is byte sequences from the command line to be output to the screen as codepoints.
               </p>
               <p class="p">
                 Multiple input sources are allowed but only a single output destination is allowed.
