--- a/documentation/iki_read.html
+++ b/documentation/iki_read.html
@@ -257,39 +257,45 @@
                 </table>
               </div>
               <p class="p">
+                This program will find and print Variables, Vocabularies, or Content following the IKI standard, without focusing on any particular Vocabulary specification.
+              </p>
+              <p class="p">
                 The <code class="code">-r/--replace</code> option requires 2 additional parameters: <code class="code">&lt;vocabulary&gt; &lt;with&gt;</code>.
               </p>
               <dl class="dl">
                 <div class="di">
-                  <dt class="dt">vocabulary</dt><dd class="dd">The name of the vocabulary whose content is to be substituted.</dd>
+                  <dt class="dt">vocabulary</dt><dd class="dd">The name of the Vocabulary whose Content is to be substituted.</dd>
                 </div>
                 <div class="di">
                   <dt class="dt">with</dt><dd class="dd">The new string to use as the substitute.</dd>
                 </div>
               </dl>
               <p class="p">
-                The <code class="code">-R/--reassign</code> and the <code class="code">-s/--substitute</code> options require 3 additional parameters: <code class="code">&lt;vocabulary&gt; &lt;replace&gt; &lt;with&gt;</code>.
+                The Vocabulary is case-sensitive and must exactly match.
+              </p>
+              <p class="p">
+                The <code class="code">-R/--reassign</code> option and the <code class="code">-s/--substitute</code> options require 3 additional parameters:: <code class="code">&lt;vocabulary&gt; &lt;replace&gt; &lt;with&gt;</code>.
               </p>
               <dl class="dl">
                 <div class="di">
-                  <dt class="dt">vocabulary</dt><dd class="dd">The name of the vocabulary whose content is to be substituted.</dd>
+                  <dt class="dt">vocabulary</dt><dd class="dd">The name of the Vocabulary whose Content is to be substituted.</dd>
                 </div>
                 <div class="di">
-                  <dt class="dt">replace</dt><dd class="dd">The content matching this exact string will be substituted.</dd>
+                  <dt class="dt">replace</dt><dd class="dd">The Content matching this exact string will be substituted.</dd>
                 </div>
                 <div class="di">
                   <dt class="dt">with</dt><dd class="dd">The new string to use as the substitute.</dd>
                 </div>
               </dl>
               <p class="p">
-                The <em class="em">vocabulary</em> and <em class="em">replacement</em> are case-sensitive and must exactly match.
+                The Vocabulary and replacement are case-sensitive and must exactly match.
               </p>
               <p class="p">
                 The <code class="code">-W/--wrap</code> option requires 3 additional parameters: <code class="code">&lt;vocabulary&gt; &lt;before&gt; &lt;after&gt;</code>.
               </p>
               <dl class="dl">
                 <div class="di">
-                  <dt class="dt">vocabulary</dt><dd class="dd">The name of the vocabulary whose content is to be wrapped.</dd>
+                  <dt class="dt">vocabulary</dt><dd class="dd">The name of the vocabulary whose Content is to be wrapped.</dd>
                 </div>
                 <div class="di">
                   <dt class="dt">before</dt><dd class="dd">The string to prepend.</dd>
@@ -299,19 +305,19 @@
                 </div>
               </dl>
               <p class="p">
-                The difference between <code class="code">-r/--replace</code> and <code class="code">-s/--substitute</code> is that the <code class="code">-r/--replace</code> option substitutes all matching vocabulary names and the <code class="code">-s/--substitute</code> option substitutes all matching vocabulary names that must also have the given matching content.
+                The Vocabulary is case-sensitive and must exactly match.
               </p>
               <p class="p">
-                The <code class="code">-R/--reassign</code> option is identical to the <code class="code">-s/--substitute</code> option except that the <code class="code">-w/--wrap</code> option is ignored (not applied).
+                The difference between <code class="code">-r/--replace</code> and <code class="code">-s/--substitute</code> is that the <code class="code">-r/--replace</code> option substitutes all matching Vocabulary names and the <code class="code">-s/--substitute</code> option substitutes all matching Vocabulary names that must also have the given matching Content.
               </p>
               <p class="p">
-                The <code class="code">-s/--substitute</code> option takes priority over the <code class="code">-r/--replace</code> option when matching the same variable.
+                The <code class="code">-s/--reassign</code> option is identical to the <code class="code">-s/--substitute</code> option except that the <code class="code">-W/--wrap</code> option is ignored (not applied).
               </p>
               <p class="p">
-                The <code class="code">-W/--wrap</code> option is ignored when the <code class="code">-s/--substitute</code> option is matching the same variable.
+                The <code class="code">-s/--substitute</code> option takes priority over the <code class="code">-r/--replace</code> option when matching the same Variable.
               </p>
               <p class="p">
-                The default behavior is to only display content portion of the IKI variable.
+                The default behavior is to only display Content portion of the IKI variable.
               </p>
             </div>
           </section>
