Update: News - 2023 / 01 / 14 - FLL 0.6.3 Stable Release.

--- a/sources.html
+++ b/sources.html
@@ -94,6 +94,7 @@
                 <li>Primary Source: <a href="https://sourceforge.net/projects/fll/" class="link external">https://sourceforge.net/projects/fll/</a></li>
                 <li>Backup Source 1: <a href="https://github.com/thekevinday/fll/" class="link external">https://github.com/thekevinday/fll/</a></li>
                 <li>Backup Source 2: <a href="https://gitlab.com/kevuxer/fll/" class="link external">https://gitlab.com/kevuxer/fll/</a></li>
+                <li>Backup Source 3: <a href="https://codeberg.org/kevuxer/fll" class="link external">https://codeberg.org/kevuxer/fll</a></li>
               </ul>
             </div>
           </article>
@@ -171,6 +172,7 @@
               <ul>
                 <li><a href="https://github.com/thekevinday/kevux.org-website" class="link external">https://github.com/thekevinday/kevux.org-website</a></li>
                 <li><a href="https://gitlab.com/kevuxer/kevux.org-website" class="link external">https://gitlab.com/kevuxer/kevux.org-website</a></li>
+                <li><a href="https://codeberg.org/kevuxer/kevux.org-website" class="link external">https://codeberg.org/kevuxer/kevux.org-website</a></li>
               </ul>
             </div>
           </article>
