Bugfix: Use proper file name for Status Code stand alone release files.

--- a/fll.html
+++ b/fll.html
@@ -285,12 +285,12 @@
                       <td class="column"><a href="release/fll/0.6/3/stand_alone/stand_alone-firewall-0.6.3.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.6/3/stand_alone/stand_alone-fss_status_code-0.6.3.tar.gz" class="link download">Firewall 0.6.3 (Stand Alone)</a></td>
+                      <td class="column"><a href="release/fll/0.6/3/stand_alone/stand_alone-fss_status_code-0.6.3.tar.gz" class="link download">FSS Status Code 0.6.3 (Stand Alone)</a></td>
                       <td class="column"><a href="release/fll/0.6/3/stand_alone/stand_alone-fss_status_code-0.6.3.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/3/stand_alone/stand_alone-fss_status_code-0.6.3.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.6/3/stand_alone/stand_alone-status_code-0.6.3.tar.gz" class="link download">Firewall 0.6.3 (Stand Alone)</a></td>
+                      <td class="column"><a href="release/fll/0.6/3/stand_alone/stand_alone-status_code-0.6.3.tar.gz" class="link download">Status Code 0.6.3 (Stand Alone)</a></td>
                       <td class="column"><a href="release/fll/0.6/3/stand_alone/stand_alone-status_code-0.6.3.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.6/3/stand_alone/stand_alone-status_code-0.6.3.tar.asc" class="link download">GPG</a></td>
                     </tr>
