Update: Add level and individual FLL release file links.

--- a/fll.html
+++ b/fll.html
@@ -307,6 +307,8 @@
               </p>
               <ul>
                 <li><strong class="strong">Sourceforge, Monolithic</strong>: <a href="https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.3/monolithic/" class="link external">https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.3/monolithic/</a></li>
+                <li><strong class="strong">Sourceforge, Level</strong>: <a href="https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.3/level/" class="link external">https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.3/level/</a></li>
+                <li><strong class="strong">Sourceforge, Individual</strong>: <a href="https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.3/individual/" class="link external">https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.3/individual/</a></li>
                 <li><strong class="strong">Sourceforge, Programs</strong>: <a href="https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.3/program/" class="link external">https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.3/program/</a></li>
                 <li><strong class="strong">Sourceforge, Stand Alone</strong>: <a href="https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.3/stand_alone/" class="link external">https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.3/stand_alone/</a></li>
               </ul>
