Bugfix: Use Codeberg for the Codeberg name and not Gitlab.

--- a/fll.html
+++ b/fll.html
@@ -318,7 +318,7 @@
               <ul>
                 <li><strong class="strong">Github</strong>: <a href="https://github.com/thekevinday/fll/releases/tag/0.6.3" class="link external">https://github.com/thekevinday/fll/releases/tag/0.6.3</a></li>
                 <li><strong class="strong">Gitlab</strong>: <a href="https://gitlab.com/kevuxer/fll/-/releases/0.6.3" class="link external">https://gitlab.com/kevuxer/fll/-/releases/0.6.3</a></li>
-                <li><strong class="strong">Gitlab</strong>: <a href="https://codeberg.org/kevuxer/fll/-/releases/0.6.3" class="link external">https://codeberg.org/kevuxer/fll/-/releases/0.6.3</a></li>
+                <li><strong class="strong">Codeberg</strong>: <a href="https://codeberg.org/kevuxer/fll/-/releases/0.6.3" class="link external">https://codeberg.org/kevuxer/fll/-/releases/0.6.3</a></li>
               </ul>
             </div>
           </article>
