Update: There are now four release locations.
I keep finding small details.
Hopefully this is the last for a while.

--- a/fll.html
+++ b/fll.html
@@ -87,12 +87,13 @@
                 The <strong class="strong">Featureless Linux Library</strong> is a collection of standards, specifications, and software for providing a suite of Linux focused functionality. One of the main goal is to play on the word "feature" and provide a featureless library. That is, a library that is not always changing and being rewritten breaking <abbr title="Application Programming Interface">API</abbr> and <abbr title="Application Binary Interface">ABI</abbr> to introduce features. How this is achieved and to what extend this is achieved and followed is to be described in the documentation and specifications.
               </p>
               <p class="p">
-                The project can be found in three locations.
+                The project can be found in four locations.
               </p>
               <ol>
                 <li><a href="https://sourceforge.net/projects/fll/" class="link external">Sourceforge</a></li>
                 <li><a href="https://github.com/thekevinday/fll/" class="link external">Github</a></li>
                 <li><a href="https://gitlab.com/kevuxer/fll/" class="link external">Gitlab</a></li>
+                <li><a href="https://codeberg.org/kevuxer/fll/" class="link external">Codeberg</a></li>
               </ol>
               <p class="p">
                 The source code contains the plain text documentation describing the projects and specifications describing the standards. This website will be updated to present this material.
