Update: Website copyright year, adding 2023.

--- a/licenses.html
+++ b/licenses.html
@@ -96,7 +96,7 @@
                 Everything else on this website that is source code, including <abbr title="Hyper Text Markup Language">HTML</abbr> markup, <abbr title="Cascading Style Sheets">CSS</abbr>, and Javascript, is under <abbr title="GNU Lesser General Public License version 2.1 or greater">LGPLv2.1+</abbr> license.
               </p>
               <p class="p">
-                © 2022 Kevin Day
+                © 2022-2023 Kevin Day
               </p>
             </div>
           </article>
