Update: Structure of webbing page.

--- a/webbing.html
+++ b/webbing.html
@@ -78,26 +78,32 @@
       <div role="document" class="main-block">
         <main class="main">
           <header class="section-header header">
-            <h1 class="section-title h h1">About</h1>
+            <h1 class="section-title h h1">Webbing</h1>
           </header>
 
-          <div class="main-content">
-            <p class="p">
-              The old internet at one point had many websites linking to other websites.
-              This linking process is a pre-search engine error idea.
-              This <em class="em">webbing</em> page brings back the old concept of finding websites without a search engine.
-            </p>
-            <p class="p">
-              The purpose of this page is to provide links to external websites that are not directly related to this website.
-              Websites that provide interesting things that might be associated with this project or in some way share similar ideologies or designs.
-              This page page will be slowly populated over time.
-            </p>
-            <p class="p">
-              These websites do not represent the <em class="em">Kevux</em> website and neither does the <em class="em">Kevux</em> website represent these sites.
-              At no point should you consider or assume that these websites or their authors share common beliefs.
-              The links to these websites could, at any point in time, become unavailable.
-            </p>
-          </div>
+          <article id="about" class="article">
+            <header class="article-header header">
+              <h2 class="article-title h h2">About</h2>
+            </header>
+
+            <div class="article-content">
+              <p class="p">
+                The old internet at one point had many websites linking to other websites.
+                This linking process is a pre-search engine error idea.
+                This <em class="em">webbing</em> page brings back the old concept of finding websites without a search engine.
+              </p>
+              <p class="p">
+                The purpose of this page is to provide links to external websites that are not directly related to this website.
+                Websites that provide interesting things that might be associated with this project or in some way share similar ideologies or designs.
+                This page page will be slowly populated over time.
+              </p>
+              <p class="p">
+                These websites do not represent the <em class="em">Kevux</em> website and neither does the <em class="em">Kevux</em> website represent these sites.
+                At no point should you consider or assume that these websites or their authors share common beliefs.
+                The links to these websites could, at any point in time, become unavailable.
+              </p>
+            </div>
+          </article>
 
           <article id="linux" class="article">
             <header class="article-header header separate">
