Update: Add public keys and provide checksum pages and documentation.

--- a/fll.html
+++ b/fll.html
@@ -101,6 +101,9 @@
               <p class="p">
                 In addition to being a library, the <abbr title="Featureless Linux Library">FLL</abbr> also provides several programs. Some programs, such as <strong class="strong">Featureless Make</strong> (a build system similar to <strong class="strong">GNU Make</strong>), are forever part of the <abbr title="Featureless Linux Library">FLL</abbr>. Other programs, such as the <strong class="strong">Controller</strong> program, will eventually bud off into their own project space.
               </p>
+              <p class="p">
+                Many of these files also include <a href="checksum.html" class="link">checksums</a> to help provide integrity (under <em class="em">Hash</em>) and authenticity (under <em class="em">Sign</em>).
+              </p>
             </div>
           </article>
 
