--- a/news.html
+++ b/news.html
@@ -68,6 +68,9 @@
             <a href="sources.html" class="nav-text link">Source Code</a>
           </div>
           <div class="nav-item block">
+            <a href="checksum.html" class="nav-text link">Checksum</a>
+          </div>
+          <div class="nav-item block">
             <a href="webbing.html" class="nav-text link">Webbing</a>
           </div>
           <div class="nav-item block ellipses">
@@ -156,6 +159,7 @@
               <ul>
                 <li>The <a href="licenses.html" class="content link">license information</a> for this website and relating projects.</li>
                 <li>Details about <a href="sources.html" class="content link">source code</a> for this website and relating projects.</li>
+                <li><a href="checksum.html" class="content link">Checksums</a> are used for data integrity and authentication purposes.</li>
                 <li>Additional links, called <a href="webbing.html" class="content link">webbing</a>, that represent websites that are of potential interest.</li>
               </ul>
             </div>
