Update: Featureless Make specification regarding multiple single-valued Objects.
This is not referring to Objects with multiple Content.
Instead, this refers to multiple identical Objects where that Object is expected to have only a single assignment.

--- a/documentation/fake/specifications/fakefile.html
+++ b/documentation/fake/specifications/fakefile.html
@@ -297,6 +297,9 @@
                     This includes the declaration of define and parameter IKI variable substitution values.
                   </p>
                   <p class="p">
+                    If multiple <strong class="strong">Objects</strong> of the same name exist and that <strong class="strong">Object</strong> only supports a single value, then only the <strong class="strong">Content</strong> from the last same named <strong class="strong">Object</strong> is used.
+                  </p>
+                  <p class="p">
                     The build settings may also be specified in the Settings Section.
                   </p>
                   <p class="p">
