--- a/news.html
+++ b/news.html
@@ -51,6 +51,10 @@
       <div id="nav-expanded" class="nav-block">
         <nav id="kevux-document-nav" class="nav-menu">
           <div class="nav-item block">
+            <div class="nav-text notice">2023 / 03 / 16</div>
+            <a href="news/2023/2023_03_16-fll_0_6_4_release.html" class="nav-text link">FLL 0.6.4 Release</a>
+          </div>
+          <div class="nav-item block">
             <div class="nav-text notice">2023 / 02 / 06</div>
             <a href="news/2023/2023_02_06-turtle_and_fll.html" class="nav-text link">Turtle and FLL</a>
           </div>
@@ -90,8 +94,51 @@
             <h1 class="section-title h h1">News</h1>
           </header>
 
-          <article id="2023_02_06-turtle_and_fll" class="article">
+          <article id="2023_03_16-fll_0_6_4_release" class="article">
             <header class="article-header header">
+              <h2 id="2023_03_16-fll_0_6_4_release-title" class="article-title h h2">2023 / 03 / 16 - FLL 0.6.4 Release</h2>
+            </header>
+
+            <div class="article-content">
+              <p class="p">
+                The <strong class="strong">Featureless Linux Library</strong> stable version 0.6.4 is released.
+              </p>
+              <p class="p">
+                Adds the following stand alone programs:
+              </p>
+              <ul>
+                <li><code class="code">controller</code></li>
+                <li><code class="code">fss_identify</code></li>
+                <li><code class="code">iki_read</code></li>
+                <li><code class="code">iki_write</code></li>
+              </ul>
+              <p class="p">
+                Copyrights are now displayed when the programs are passed the <code class="code">+C/++copyright</code> standardized parameter.
+              </p>
+              <p class="p">
+                The IKI standard is found to be slightly lacking.
+                There is a strong need for IKI variables immediately after word-characters that are not part of the variable name.
+                The IKI standard and specification is now updated to utilize open bracket '<code class="code">[</code>' (<code class="code">U+005B</code>) and close bracket '<code class="code">]</code>' (<code class="code">U+005D</code>), commonly referred to as "wrap" or "wrapping".
+                Such an IKI variable looks like <code class="code">[vocabulary]:"content"</code> (as opposed to <code class="code">vocabulary:"content"</code>).
+                New functionality is provided to keep this project compliant with the recent changes to the IKI standard and specifications.
+              </p>
+              <p class="p">
+                A major behavioral bug has been found in the Controller program regarding the "program" operation mode.
+                Solving this the simple way would then break other behavior.
+                To avoid this, a new feature is implemented, called the "helper" operation mode.
+                The "helper" operation mode provides an alternative to "program" operation mode to allow for starting tasks.
+              </p>
+              <p class="p">
+                Check out the project on the <a href="fll.html#release" class="link"><abbr title="Featureless Linux Library">FLL</abbr> release</a> page.
+              </p>
+              <p class="p">
+                <a id="2023_03_16-fll_0_6_4_release-more" href="news/2023/2023_03_16-fll_0_6_4_release.html" class="content link" aria-labelledby="2023_03_16-fll_0_6_4_release-more 2023_03_16-fll_0_6_4_release-title">Continue reading…</a>
+              </p>
+            </div>
+          </article>
+
+          <article id="2023_02_06-turtle_and_fll" class="article">
+            <header class="article-header header separate">
               <h2 id="2023_02_06-turtle_and_fll-title" class="article-title h h2">2023 / 02 / 06 - Turtle and FLL</h2>
             </header>
 
@@ -117,9 +164,9 @@
             </div>
           </article>
 
-          <article id="2022_12_17-fll_0_6_2_release" class="article">
+          <article id="2023_01_14-fll_0_6_3_release" class="article">
             <header class="article-header header separate">
-              <h2 id="2022_12_17-fll_0_6_2_release-title" class="article-title h h2">2023 / 01 / 14 - FLL 0.6.3 Release</h2>
+              <h2 id="2023_01_14-fll_0_6_3_release-title" class="article-title h h2">2023 / 01 / 14 - FLL 0.6.3 Release</h2>
             </header>
 
             <div class="article-content">
@@ -131,7 +178,7 @@
                 This primarily adds documentation and fixes a small number of bugs found.
               </p>
               <p class="p">
-                Added the following stand alone programs:
+                Adds the following stand alone programs:
               </p>
               <ul>
                 <li><code class="code">fss_status_code</code></li>
