Update: News - 2023 / 05 / 06 - Turtle Development.

--- a/news.html
+++ b/news.html
@@ -51,6 +51,10 @@
       <div id="nav-expanded" class="nav-block">
         <nav id="kevux-document-nav" class="nav-menu">
           <div class="nav-item block">
+            <div class="nav-text notice">2023 / 05 / 06</div>
+            <a href="news/2023/2023_05_06-turtle_development.html" class="nav-text link">Turtle Development</a>
+          </div>
+          <div class="nav-item block">
             <div class="nav-text notice">2023 / 04 / 29</div>
             <a href="news/2023/2023_04_29-fll_0_6_5_release.html" class="nav-text link">FLL 0.6.5 Release</a>
           </div>
@@ -98,8 +102,23 @@
             <h1 class="section-title h h1">News</h1>
           </header>
 
-          <article id="2023_04_29-fll_0_6_5_release" class="article">
+          <article id="2023_05_06-turtle_development" class="article">
             <header class="article-header header">
+              <h2 id="2023_05_06-turtle_development-title" class="article-title h h2">2023 / 05 / 06 - Turtle Development</h2>
+            </header>
+
+            <div class="article-content">
+              <p class="p">
+                I decided briefly return my focus to <strong class="strong">Turtle Kevux</strong> development following the recent 0.6.5 release of the Featureless Linux Library (<abbr title="Featureless Linux Library">FLL</abbr>). Several good things were discovered. The most notable is that both <a href="https://musl.libc.org/" class="link external">musl-libc</a> (vesion 1.2.4) and <a href="https://valgrind.org/" class="link external">valgrind</a> (version 3.21.0) made some relevant releases. The problems that I have been facing appear to have been resolved. Attempting to boot the kernel revealed some additional problems. These problems are primarily that the display does not display and gives the false impression that the system did not boot.
+              </p>
+              <p class="p">
+                <a id="2023_05_06-turtle_development-more" href="news/2023/2023_05_06-turtle_development.html" class="content link" aria-labelledby="2023_05_06-turtle_development-more 2023_05_06-turtle_development-title">Continue reading…</a>
+              </p>
+            </div>
+          </article>
+
+          <article id="2023_04_29-fll_0_6_5_release" class="article">
+            <header class="article-header header separate">
               <h2 id="2023_04_29-fll_0_6_5_release-title" class="article-title h h2">2023 / 04 / 29 - FLL 0.6.5 Release</h2>
             </header>
 
