Update: News - 2023 / 07 / 02 - FLL 0.6.6 Stable Release.
Update all appropriate pages regarding the release.

--- a/news.html
+++ b/news.html
@@ -51,6 +51,10 @@
       <div id="nav-expanded" class="nav-block">
         <nav id="kevux-document-nav" class="nav-menu">
           <div class="nav-item block">
+            <div class="nav-text notice">2023 / 07 / 02</div>
+            <a href="news/2023/2023_07_02-fll_0_6_6_release.html" class="nav-text link">FLL 0.6.6 Release</a>
+          </div>
+          <div class="nav-item block">
             <div class="nav-text notice">2023 / 05 / 06</div>
             <a href="news/2023/2023_05_06-turtle_development.html" class="nav-text link">Turtle Development</a>
           </div>
@@ -102,8 +106,38 @@
             <h1 class="section-title h h1">News</h1>
           </header>
 
-          <article id="2023_05_06-turtle_development" class="article">
+          <article id="2023_07_02-fll_0_6_6_release" class="article">
             <header class="article-header header">
+              <h2 id="2023_07_02-fll_0_6_6_release-title" class="article-title h h2">2023 / 07 / 02 - FLL 0.6.5 Release</h2>
+            </header>
+
+            <div class="article-content">
+              <p class="p">
+                The <strong class="strong">Featureless Linux Library</strong> stable version 0.6.6 is released.
+              </p>
+              <p class="p">
+                This is release is made in celebration of the Fourth of July.
+              </p>
+              <p class="p">
+                There are about 1500 additional man pages representing the functions in addition to the usual bug fixes.
+                The man pages were sort of generated and then manually fixed.
+                These man pages are considered good enough but are not great.
+                There will likely be a future project to assist in generating man pages that are better than the tools that I currently used.
+              </p>
+              <p class="p">
+                Of particular note is that I found and fixed problems in the <abbr title="Featureless Setting Specifications">FSS</abbr> processing code. The comments were not always being processed correctly resulting in actual Content being missed.
+              </p>
+              <p class="p">
+                The Featureless Make build program has several notable fixes and improvements. The build system has now seen a lot more uses and more corner cases and minor details are addressed. Problems with propogating arguments across builds is now fixed.
+              </p>
+              <p class="p">
+                <a id="2023_07_02-fll_0_6_6_release-more" href="news/2023/2023_07_02-fll_0_6_6_release.html" class="content link" aria-labelledby="2023_07_02-fll_0_6_6_release-more 2023_07_02-fll_0_6_6_release-title">Continue reading…</a>
+              </p>
+            </div>
+          </article>
+
+          <article id="2023_05_06-turtle_development" class="article">
+            <header class="article-header header separate">
               <h2 id="2023_05_06-turtle_development-title" class="article-title h h2">2023 / 05 / 06 - Turtle Development</h2>
             </header>
 
