Update: News - 2023 / 09 / 07 - FLL 0.6.7 Stable Release.
Update all appropriate pages regarding the release.

--- a/news.html
+++ b/news.html
@@ -51,6 +51,10 @@
       <div id="nav-expanded" class="nav-block">
         <nav id="kevux-document-nav" class="nav-menu">
           <div class="nav-item block">
+            <div class="nav-text notice">2023 / 09 / 07</div>
+            <a href="news/2023/2023_09_07-fll_0_6_7_release.html" class="nav-text link">FLL 0.6.7 Release</a>
+          </div>
+          <div class="nav-item block">
             <div class="nav-text notice">2023 / 07 / 02</div>
             <a href="news/2023/2023_07_02-fll_0_6_6_release.html" class="nav-text link">FLL 0.6.6 Release</a>
           </div>
@@ -106,8 +110,39 @@
             <h1 class="section-title h h1">News</h1>
           </header>
 
-          <article id="2023_07_02-fll_0_6_6_release" class="article">
+          <article id="2023_09_07-fll_0_6_7_release" class="article">
             <header class="article-header header">
+              <h2 id="2023_09_07-fll_0_6_7_release-title" class="article-title h h2">2023 / 09 / 07 - FLL 0.6.7 Release</h2>
+            </header>
+
+            <div class="article-content">
+              <p class="p">
+                The <strong class="strong">Featureless Linux Library</strong> stable version 0.6.7 is released.
+              </p>
+              <p class="p">
+                With this release I hope to see a very stable 0.6 release series.
+              </p>
+              <p class="p">
+                Only a single functional feature is added and then it is a bug fix in the guise of a feature.
+                The <strong class="strong">Featureless Make</strong> program has an oversight in regards to "<em class="em">specify a custom path</em>" within the buid settings paths.
+                I discovered this while working on the <strong class="strong">TacocaT</strong> program in the <strong class="strong">Kevux Tools</strong> project.
+              </p>
+              <p class="p">
+                A new <abbr title="Featureless Setting Specifications">FSS</abbr> standard, <em class="em">FSS-0010 "Encrypted Simple Packet"</em>, is added.
+                This is generally going to be in the 0.7.x and greater version
+              </p>
+              <p class="p">
+                I discovered a regression in the 0.6.6 release and possibly earlier regarding the dependencies in the stand alone builds.
+                This should no longer be a problem as of 0.6.7.
+              </p>
+              <p class="p">
+                <a id="2023_09_07-fll_0_6_7_release-more" href="news/2023/2023_09_07-fll_0_6_7_release.html" class="content link" aria-labelledby="2023_09_07-fll_0_6_7_release-more 2023_09_07-fll_0_6_7_release-title">Continue reading…</a>
+              </p>
+            </div>
+          </article>
+
+          <article id="2023_07_02-fll_0_6_6_release" class="article">
+            <header class="article-header header separate">
               <h2 id="2023_07_02-fll_0_6_6_release-title" class="article-title h h2">2023 / 07 / 02 - FLL 0.6.6 Release</h2>
             </header>
 
